packages/raystack/components/dialog/dialog.module.css
.dialogOverlay {
  background-color: var(--rs-color-overlay-black-a5);
  position: fixed;
  inset: 0;
  transition: opacity 150ms cubic-bezier(0.45, 1.005, 0, 1.005);
  z-index: var(--rs-z-index-portal);
}

.dialogOverlay[data-starting-style],
.dialogOverlay[data-ending-style] {
  opacity: 0;
}

.dialogContent {
  background-color: var(--rs-color-background-base-primary);
  border-radius: var(--rs-radius-2);
  box-shadow: var(--rs-shadow-floating);
  max-width: 90vw;
  min-width: 200px;
  min-height: 100px;
  max-height: 85vh;
  padding: 0;
  position: fixed;
  top: 50%;
  left: 50%;
  transition: opacity 150ms;
  transform: translate(-50%, -50%);
}

.dialogContent.showNestedAnimation {
  transform: translate(-50%, -50%)
    scale(calc(1 - 0.1 * var(--nested-dialogs, 0)));
  translate: 0 calc(0px + 1.25rem * var(--nested-dialogs, 0));
}

.dialogContent:focus {
  outline: none;
}
.dialogContent[data-nested-dialog-open]::after {
  content: "";
  inset: 0;
  position: absolute;
  border-radius: inherit;
  background-color: var(--rs-color-overlay-black-a1);
}

.dialogContent.showNestedAnimation[data-starting-style],
.dialogContent.showNestedAnimation[data-ending-style] {
  opacity: 0;
  transform: translate(-50%, -50%) scale(0.9);
}

.close {
  all: unset;
  display: inline-flex;
  align-items: center;
  border-radius: var(--rs-radius-2);
  padding: var(--rs-space-2);
  font-weight: var(--rs-font-weight-medium);
  cursor: pointer;
}

.closeButton {
  position: absolute;
  top: var(--rs-space-5);
  right: var(--rs-space-7);
}

.close:hover {
  background-color: var(--rs-color-background-base-primary-hover);
  color: var(--rs-color-foreground-base-primary);
}

.overlayBlur {
  backdrop-filter: var(--rs-blur-lg);
}

.viewport {
  display: flex;
  align-items: center;
  justify-content: center;
  position: fixed;
  inset: 0;
  z-index: var(--rs-z-index-portal);
}

@media (prefers-reduced-motion: no-preference) {
  .dialogContent {
    transition:
      opacity 150ms,
      transform 150ms;
  }
}

.header {
  padding: var(--rs-space-5) var(--rs-space-7);
  border-bottom: 1px solid var(--rs-color-border-base-primary);
}

.title {
  color: var(--rs-color-foreground-base-primary);
  font-size: var(--rs-font-size-large);
  font-style: normal;
  font-weight: var(--rs-font-weight-medium);
  line-height: var(--rs-line-height-large);
  letter-spacing: var(--rs-letter-spacing-large);
  margin: 0;
}

.body {
  padding: var(--rs-space-7);
}

:where(.body) + .footer {
  border-top: 1px solid var(--rs-color-border-base-primary);
}

.description {
  color: var(--rs-color-foreground-base-secondary);
  font-size: var(--rs-font-size-small);
  font-style: normal;
  font-weight: var(--rs-font-weight-regular);
  line-height: var(--rs-line-height-small);
  letter-spacing: var(--rs-letter-spacing-small);
  margin: 0;
}

.footer {
  padding: var(--rs-space-5) var(--rs-space-7);
}

